# wwg

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  config.template.toml  mcp_server.py  opencode.json  pyproject.toml
.opencode/command/: analyze.md
.opencode/skill/user-behavior-analysis/: SKILL.md
.opencode/skill/user-profile-synthesis/: SKILL.md
mask/: 2023.drawio
scripts/: analyze.py  split.py
src/wwg/: __main__.py  config.py  crawl.py  generate.py  stopwords.txt
