[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

# from https://peps.python.org/pep-0621/
[project]
name = "wwg"
version = "0.2.2"
description = "Weibo Wordcloud Generator"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "replica42", email = "replica42@outlook.com" }]
maintainers = []
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "beautifulsoup4~=4.14.3",
    "dacite~=1.9.2",
    "html5lib~=1.1",
    "jieba~=0.42.1",
    "requests~=2.32.4",
    "tomli~=2.3.0",
    "typer~=0.20.0",
    "wordcloud~=1.9.4",
]

[project.optional-dependencies]
dev = ["black", "flake8", "isort", "mypy", "ipython", "pre-commit", "types-requests", "types-beautifulsoup4"]

[project.urls]
Homepage = "https://github.com/replica-42/wwg"
Source = "https://github.com/replica-42/wwg"

[project.scripts]
wwg = "wwg.__main__:entry"

[tool.isort]
profile = "black"

[tool.mypy]
namespace_packages = false

disallow_any_unimported = true
# disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true

disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

extra_checks = true
strict_equality = true

[[tool.mypy.overrides]]
module = "wordcloud"
ignore_missing_imports = true
