[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

# from https://peps.python.org/pep-0621/
[project]
name = "wwg"
version = "0.3.0"
description = "Weibo Wordcloud Generator"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "replica42", email = "replica42@outlook.com" }]
maintainers = []
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "beautifulsoup4~=4.14.3",
    "dacite~=1.9.2",
    "html5lib~=1.1",
    "jieba~=0.42.1",
    "requests~=2.32.4",
    "tomli~=2.3.0",
    "typer~=0.20.0",
    "wordcloud~=1.9.4",
    "thulac~=0.2.2",
    "pkuseg~=0.0.25",
    "numpy~=2.3.5",
    "hanlp~=2.1.3"
]

[project.optional-dependencies]
dev = ["black", "flake8", "isort", "mypy", "ipython", "pre-commit", "types-requests", "types-beautifulsoup4"]

[project.urls]
Homepage = "https://github.com/replica-42/wwg"
Source = "https://github.com/replica-42/wwg"

[project.scripts]
wwg = "wwg.__main__:entry"

[tool.isort]
profile = "black"

[tool.mypy]
strict = false
follow_untyped_imports = true

[tool.uv.extra-build-dependencies]
pkuseg = ["numpy"]